# xiv_gui_solver

./: .bumpversion.cfg  .gitignore  .ignore  Cargo.toml  Makefile.toml  README.md  Todo.md  craft.toml  makefile  pyproject.toml  python3.py  requirements.txt  requirements_dev.txt  results.txt  setup.cfg  tox.ini
configs/: consumables.yaml  recipes.yaml  users.yaml
coverage/html/: coverage.json  index.html
coverage/html/src/: action.rs.html  craft.rs.html  index.html  io.rs.html  lib.rs.html  solver.rs.html  specs.rs.html
coverage/html/tests/: index.html  io.rs.html  lib.rs.html
python/: __ignore_setup.cfg  dontlook.py  ffcraft_solver-0.0.4-py3-none-any.whl  loader.py  main.py  pyinstaller_log.txt  pyproject.toml  requirements.txt  requirements_dev.txt
python/src/ffcraft_solver/: __init__.py  __main__.py  example.py
python/src/ffcraft_solver/modules/: __init__.py  loader.py  log.py  solver.py  translator.py
python/src/xiv_csolver/: __init__.py  __main__.py  example.py
python/src/xiv_csolver/configs/: recipes.yaml  users.yaml
python/src/xiv_csolver/modules/: loader.py  log.py  printer.py  solver.py  translator.py
src/: action.rs  craft.rs  io.rs  lib.rs  libs.rs  main.rs  python_bindings.rs  solver.rs  specs.rs  utils.rs
src/solver/: test_solver.rs
src/utils/: action.rs  craft.rs  solver.rs
