[package]
name = "xiv_craft_solver"
version = "0.1.5"
edition = "2021"
authors = ["谭俊健","Dandaedre","Vkyfox"]
description = "Small XIV solver library in rust, with python and rust bindings"
homepage = "https://proxy.dandaedre.com/gitea/Dandaedre/rcraft_solver"
documentation = "https://proxy.dandaedre.com/gitea/Dandaedre/rcraft_solver"
repository = "https://proxy.dandaedre.com/gitea/Dandaedre/rcraft_solver.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.5.9"
clap = {version = "4.1.6", features = ["derive"]}
threadpool = "1.8.1"
# For python bindings TODO: make it optionnal
pyo3 = { version = "0.18.0", features = ["extension-module"] }

# [target.'cfg(not(no_python))'.dependencies]
# pyo3 = { version = "0.18.0", features = ["extension-module"] }

# [build]
# target = ["x86_64-unknown-linux-gnu", "x86_64-unknown-windows-gnu"]

[profile.release]
panic = 'abort'
opt-level = 3
lto = true

[features]
default = []
verbose = []
no_python = [] # Removes the python bindings
fast = []      # Remove some under optimisations that try to find other routes

[lib]
name = "xiv_craft_solver" # Pending rename ffcraft_solver_lib
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "ffcraft_solver_cli"
path = "src/bin/ffcraft.rs"

[tool.maturin]
python-source = "python"