[package]
name = "xiv_csolver"
version = "0.1.8"
edition = "2021"
authors = ["谭俊健","Dandaedre","Vkyfox"]
description = "Small XIV solver library in rust, with python and rust bindings"
homepage = "https://proxy.dandaedre.com/gitea/Dandaedre/xiv_csolver"
documentation = "https://proxy.dandaedre.com/gitea/Dandaedre/xiv_csolver"
repository = "https://proxy.dandaedre.com/gitea/Dandaedre/xiv_csolver.git"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
lazy_static = "1.4.0"
toml = "0.5.9"
clap = {version = "4.1.6", features = ["derive"]}
threadpool = "1.8.1"
# For python bindings TODO: make it optionnal
pyo3 = { version = "0.18.1", features= ["extension-module"]}

# [target.'cfg(not(no_python))'.dependencies]
# pyo3 = { version = "0.18.0", features = ["extension-module"] }

# [build]
# target = ["x86_64-unknown-linux-gnu", "x86_64-unknown-windows-gnu"]

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
panic = 'abort'
opt-level = 3
lto = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
verbose = []
no_python = [] # Removes the python bindings
fast = []      # Remove some under optimisations that try to find other routes

[lib]
name = "xiv_csolver_lib"
path = "src/lib.rs"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "xiv_csolver_cli"
path = "src/bin/xiv_csolver.rs"

