[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project] # The rust bindings
name = "xiv_csolver_lib"
requires-python = ">=3.7"
version = "0.1.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]