[metadata]
name = ffcraft_solver
description = A rust program for solving FFXIV craft recipe.
author = Dandaedre & Vkyfox
version = 0.0.4
license = Mozilla Public License Version 2.0
license_file = LICENSE
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9

[options]
packages =
    ffcraft_solver
    ffcraft_solver.modules
install_requires =
    pyyaml>=6.0
python_requires = >=3.9
package_dir =
    =src

zip_safe = no

[options.packages.find]
where =
    = python
    = python/ffcraft_solver

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.24.3
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>==0.910
    pyyaml>=6.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160