[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project] # The Python GUI
name = "xiv_csolver"
authors = [
    {name="Vkyfox"},
    {name="Dandaedre"},
]
requires-python = ">=3.7"
version = "0.1.6"
license = {text="Mozilla Public License Version 2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pytest.ini_options]
addopts = "--cov=xiv_csolver"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "python"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true